--- a/index.html
+++ b/index.html
@@ -28,5 +28,30 @@
             </div>
         </div>
     </div>
+    <div class="image-container">
+        <h1>Some random information.</h1>
+        <div class="cards flex">
+            <div class="card">
+                <div class="card-image">
+                </div>
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                </div>
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                </div>
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                </div>
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
