--- a/index.html
+++ b/index.html
@@ -53,5 +53,11 @@
             </div>
         </div>
     </div>
+    <div class="quote-section flex">
+        <div class="quote-container">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actully read it . Who knows? All I know is that it looks nice.</p>
+            <p class="autor">- Thor, God of Thunder</p>
+        </div>
+    </div>
 </body>
 </html>
