Add footer section

--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
             <p class="autor">- Thor, God of Thunder</p>
         </div>
     </div>
+    <div class="footer flex">
+        <p>Copyright &copy; The Odin Project 2021</p>
+    </div>
 </body>
 </html>
