Add call to action section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
             <p class="autor">- Thor, God of Thunder</p>
         </div>
     </div>
+    <div class="call-to-action-section">
+        <div class="call-to-action-container flex">
+            <div class="text"> 
+                <p class="title">Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
     <div class="footer flex">
         <p>Copyright &copy; The Odin Project 2021</p>
     </div>
